bk_ida/gccida/c0/copy_insn_list
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1825:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pattern = ( rtx)insn[2]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1829:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( rtx)insn[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1838:13: error: expected identifier or '('
 struct set = v14; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1847:5: error: expected expression
&&  struct set 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1858:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( rtx)copy[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1870:51: error: use of undeclared identifier 'machine_mode'
new_set->fld[0].rtwint = ( __int64)gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)new_set->fld[0].rtwint)); 
                                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1870:66: error: expected expression
new_set->fld[0].rtwint = ( __int64)gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)new_set->fld[0].rtwint)); 
                                                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1882:5: error: expected expression
&&  struct set 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1888:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)static_chain_incoming_rtx), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1888:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)static_chain_incoming_rtx), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1900:5: error: expected expression
&&  struct set 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1909:12: error: expected expression
else if (  struct set && rtx_equal_p( set->fld[0].rtx, global_rtl[7]) ) 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:1929:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
temp = ( rtx)set[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/integrate.c:2026:35: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
copy[3].fld[0].rtwint = ( __int64)insn[2]; 
                                  ^~~~~~~
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_insn_list/src/obj/integrate.o] Error 1
